# Hanport-data-parser

./: .gitignore  CMakeLists.txt  README.md  app.ini  developerguide.md  todo.md  userguide.md
configs/: .app.ini.swp  app.ini  bgs-lokal.ini  mqtt_sites.conf
deploy/: bgs-lokal.ini  debug.sh  deploy.sh  hanport.service  install-deps.sh  install.sh  package.sh  setup-serial.sh  uninstall.sh
deploy/lib/: libmodbus.so.5  libpaho-mqtt3as.so.1  libpaho-mqtt3as.so.1.3.14  libpaho-mqttpp3.so.1  libpaho-mqttpp3.so.1.5.4
exampledata/: example2.txt  generate_datafile.py
exploration-tests/: enumtest.cpp  main  main.cpp  terminos-hanport.c  test
ftpscripts/: fetchzip.sh  ftp.conf.example
hanport-deploy/: README.txt  hanport  hanport.service  install.sh
include/: CMakeLists.txt  Logger.hpp  config.hpp  filereader.hpp  hanport.hpp  hanport_data.hpp  hpData.hpp  hpDataParser.hpp  hpLogger.hpp  hpMessageValidator.hpp  hpModbuss.hpp  hpMqttPub.hpp  hpSerialRead.hpp
packbinaries/: cpbinaries.sh
scripts/: build-on-pi.sh  install-paho-pi.sh  modbus_client.py  package-source.sh
src/: CMakeLists.txt  Config.cpp  Logger.cpp  config.cpp  filereader.cpp  hanport_data.cpp  hpData.cpp  hpDataParser.cpp  hpLogger.cpp  hpMessageValidator.cpp  hpModbuss.cpp  hpMqttPub.cpp  hpSerialRead.cpp  hp_mqtt_pub_client.cpp  main.cpp  modbus_client.cpp  modbus_example.cpp  readtest.cpp  writetest.cpp
src/exampledata/: example1.txt
tests/: CMakeLists.txt  Config.hpp  configimplement.cpp  kladd.cpp  modbus_integration_test.cpp  writetest.cpp
